[metadata]
name = prequ
version = attr: prequ.__version__
description = Prequ -- Python requirement handling
long_description = file: README.rst
keywords = requirements, handling, python
url = https://github.com/suutari-ai/prequ/
maintainer = Tuomas Suutari
maintainer_email = tuomas.suutari@anders.fi
license = BSD
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Topic :: System :: Systems Administration

[options]
include_package_data = True
packages = find:
install_requires =
    click>=6
    first
    pyyaml
    six
zip_safe = False

[options.entry_points]
console_scripts =
    prequ = prequ.scripts.prequ:main

[options.packages.find]
exclude = tests, tests.*

[bdist_wheel]
universal = 1
