[metadata]
name = prequ
version = 1.4.0.post+gitver
description = Prequ -- Python requirement handling
long_description = file: README.rst
keywords = requirements, handling, python
url = https://github.com/suutari/prequ/
maintainer = Tuomas Suutari
maintainer_email = tuomas@nepnep.net
license = BSD-2-Clause
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: OS Independent
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Topic :: Software Development :: Build Tools
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Installation/Setup
    Topic :: System :: Software Distribution
    Topic :: System :: Systems Administration
    Topic :: Utilities

[options]
include_package_data = True
packages = find:
install_requires =
    click>=4
    six
    backports.tempfile ; python_version<"3.0"
    contextlib2 ; python_version<"3.0"
zip_safe = False

[options.entry_points]
console_scripts =
    prequ = prequ.scripts.prequ:main

[options.packages.find]
exclude = tests, tests.*

[bdist_wheel]
universal = 1

[tool:pytest]
norecursedirs = .* build dist venv test_data

[flake8]
exclude = .tox,dist,venv
max-line-length = 120
max-complexity = 10

[isort]
multi_line_output=4
skip=.tox,dist,venv
not_skip=__init__.py
known_first_party=prequ
default_section=THIRDPARTY

[prequ]
annotate = yes

requirements-dev =
    -e .
    tox

requirements-style =
    flake8
    flake8-isort
    flake8-print
    pep8-naming

requirements-test =
    mock
    pytest
    pytest-cov
    pytest-sugar
    pyyaml
